Refine navigation spacing and showcase varroa project

--- a/src/app/formationscolaire/formationscolaire.component.html
+++ b/src/app/formationscolaire/formationscolaire.component.html
@@ -1,4 +1,13 @@
 <mat-tab-group>
+  <mat-tab label="2022/2023 · Licence CDA, CESI" class="titre">
+    <p class="explication">
+      Licence Concepteur Développeur d'Applications suivie au CESI : architecture logicielle, industrialisation DevOps et
+      pilotage de projets agiles menés en équipe, du cahier des charges au déploiement.
+    </p>
+    <div class="formation-visual">
+      <img class="imageentreprise" src="https://www.cesi.fr/app/uploads/2021/03/CESI_Campus_Bordeaux-14.jpg" alt="Campus CESI">
+    </div>
+  </mat-tab>
   <mat-tab label="2021/2022 · Formation DevOps, Rennes" class="titre">
     <p class="explication">
       Admis à l'EPSI Rennes, j'ai plongé dans l'univers DevOps via des mises en situation professionnelles (MSPR) mêlant Jenkins,
