Change CESI campus image URL in HTML
Updated the image source for the CESI campus.

--- a/src/app/formationscolaire/formationscolaire.component.html
+++ b/src/app/formationscolaire/formationscolaire.component.html
@@ -5,7 +5,7 @@
       pilotage de projets agiles menés en équipe, du cahier des charges au déploiement.
     </p>
     <div class="formation-visual">
-      <img class="imageentreprise" src="https://www.cesi.fr/app/uploads/2021/03/CESI_Campus_Bordeaux-14.jpg" alt="Campus CESI">
+      <img class="imageentreprise" src="https://lh3.googleusercontent.com/p/AF1QipPXXVil-c6qr7CNoN5gAgr0wq1vOc2Bw9mG2UB2=s680-w680-h510-rw" alt="Campus CESI">
     </div>
   </mat-tab>
   <mat-tab label="2021/2022 · Formation DevOps, Rennes" class="titre">
