--- a/src/app/apropodemoi/apropodemoi.component.html
+++ b/src/app/apropodemoi/apropodemoi.component.html
@@ -20,8 +20,8 @@
     <article class="about-card">
       <h4>Ce que je recherche</h4>
       <p>
-        Une alternance au CESI de Caen pour progresser au contact d'équipes ambitieuses. Je souhaite rejoindre une entreprise qui
-        valorise l'innovation et l'autonomie pour faire grandir mes compétences.
+        Une alternance de 2 ans pour le Master of Engineering, option intelligence artificielle, à SupInfo. Je souhaite
+        rejoindre une entreprise qui valorise l'innovation et l'autonomie afin de faire grandir mes compétences.
       </p>
     </article>
 
