--- a/src/app/apropodemoi/apropodemoi.component.html
+++ b/src/app/apropodemoi/apropodemoi.component.html
@@ -1,6 +1,6 @@
 <div class="about">
   <div class="about-intro">
-    <h3 class="about-title">Bonjour, moi c'est Guillaume</h3>
+    <h3 class="about-title">Moi c'est Guillaume</h3>
     <p>
       Passionné par l'informatique depuis mon adolescence, j'aime comprendre les systèmes de fond en comble pour imaginer des
       expériences numériques utiles et élégantes. J'explore, je démonte, je reconstruis : l'automatisation est mon terrain de jeu
