Update footer note to include Python in credits

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,6 +177,6 @@
         </a>
       </div>
     </div>
-    <p class="footer-note">© {{ currentYear }} - Portfolio personnel développé avec Angular &amp; beaucoup de passion.</p>
+    <p class="footer-note">© {{ currentYear }} - Portfolio personnel développé avec Angular, Python &amp; beaucoup de passion.</p>
   </footer>
 </div>
